--- a/reset-your-password.html
+++ b/reset-your-password.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
@@ -18,15 +18,14 @@
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
 
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
+ <!-- Use this in all pages -->
   <link rel="stylesheet" href="css/reset.css"> <!-- Eric Meyer Stylesheet -->
   <link rel="stylesheet" href="css/style.css"> <!-- Default Stylesheet -->
-  <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
-  <link rel="stylesheet" href="css/globalTHintegration.css">
-  <link rel="stylesheet" href="css/fonts.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/forms.css">
+  <link rel="stylesheet" href="css/accordion.css">
+  <link rel="stylesheet" href="css/fonts.css">
 	<!--[if lt IE 9]>
 	  <link rel="stylesheet" href="css/ie.css">
 	<![endif]-->
@@ -34,29 +33,12 @@
 	  <link rel="stylesheet" href="css/ie9.css">
 	<![endif]-->
 	
-  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
-
-  <!-- All JavaScript at the bottom, except this Modernizr build.
-       Modernizr enables HTML5 elements & feature detects for optimal performance.
-       Create your own custom Modernizr build: www.modernizr.com/download/ -->
-  <script src="js/libs/modernizr-2.5.3.min.js"></script>
-
-  <!-- JavaScript in the header so my other stuff doesn't break -->
-
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
-  <script src="http://cachedcommons.org/cache/jquery-bbq/1.2.1/javascripts/jquery-bbq.js"></script>
-
-  <!-- scripts concatenated and minified via build script -->
-  <script src="js/jquery.cookie.js"></script>
-	<script src="js/browserimage.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/yearpicker.js"></script>
-  <script src="js/servicerequest.js"></script>
-
-  <!-- end scripts -->
+	<!-- Specific to this page -->
+	
+	<!-- All Scripts are in the bottom before the </body>. Except for jquery and modernizr -->
+	<!-- Use this in all pages -->
+	<script src="js/libs/modernizr-2.5.3.min.js"></script>
+  <script src="js/jquery-1.7.2.min.js"></script> 
 
 </head>
 <body class="medium-width">
@@ -64,68 +46,83 @@
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" alt="Archstone">
   </div>
-	<script type="text/javascript">Background.init(); </script>
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+	<!-- MJ: This needs to be here to resize this before the page finishes loading instead of after -->
+	<script src="js/browserimage.js"></script>
+
   <header>
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
 		</div>
 </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="titled-box clearfix">
+		<div id="signin" class="squared-box clearfix">
 			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
-			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div >
+			<div class="padded clearfix">
 				<form method="POST" action="we-sent-you-email.html">
-					<h1>Reset your password</h1>
-					<p class="form-note">Please answer one of your security questions to reset your password.</p><br />
-					<p class="form-note-alert">Your last answer didn't match the original, please try again</p><br>
-					<p>Question:</p>
-					<p>What city were you born in?</p><br>
-					
-					<p>Answer:</p>
-					<div style="width:550px;">
-						<div style="float:left; width:400px;"><input type="text" name="securityanswer" value="" /></div>
-						<div style="float:left; width:100px;padding-left:20px;" class="form-note-alert">Your answer didn't match the original. Try it again.</div>
-					</div>
-					<div style="clear:both;"></div>
+					<h3 class="discreet">Reset your password</h3>
+					<p class="form-note">Please answer one of your security questions to reset your password.</p>
+					<ul class="form-with-validation">
+						<li>
+							Question:<br>
+							What city were you born in?
+						</li>					
+						<li>
+							<label for="securityanswer">Answer<span class="required">*</span></label>
+							<input data-val="true" data-val-required="Confirm New Password is required and must match New Password." id="securityanswer" name="securityanswer" tabindex="1" type="text" value="" class="input-validation-error" />
+							<span class="ui-state-error-text field-validation-error" data-valmsg-for="securityanswer" data-valmsg-replace="true">
+								<span for="securityanswer" generated="true">Your last answer didn't match the original, please try again.</span>
+							</span>
+						</li>
+					</ul>
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Continue</span><span class="end"> &nbsp; </span></button>
 					</div>
-					<div class="back-to-sign-in">
-						<a href="">< Back to sign in</a>
+					<div class="backtosignin">
+						<a href="/"><img src="images/icon_back_arrow_teal.png" alt="Back to sign in"> Back to sign in</a>
 					</div>					
 				</form>
 			</div>
-			<p class="box-footer"><span></span></p>
 		</div>
 		
-		<div class="photo-box left clearfix">
-			<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
-			<img src="images/puppy.png" alt="marketing message">
-		</div>
-		
-		<div class="titled-box left clearfix small-box titled-box-right">
-			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
-			<div class="body clearfix">
-				<a href="#" class="button-droid"> &nbsp; </a>
-				<a href="#" class="button-iphone"> &nbsp; </a>
+		<div class="marketing-boxes">
+			<div class="photo-box left clearfix">
+				<p><strong>OPTIONAL</strong><br>MARKETING<br>REAL<br>ESTATE</p>
+				<img src="images/puppy.png" alt="marketing message">
 			</div>
-			<p class="box-footer"><span></span></p>
+
+			<div class="titled-box left clearfix small-box titled-box-right">
+				<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
+				<div class="body clearfix">
+					<a href="#" class="button-droid"> &nbsp; </a>
+					<a href="#" class="button-iphone"> &nbsp; </a>
+				</div>
+				<p class="box-footer"><span></span></p>
+			</div>
 		</div>
 		
   </div>
   <footer>
-		<div class="right">
-			<a href="#">ArchstoneApartments.com</a>
-		</div>
-		<div class="left-one-row">
-				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
-				<a href="#">Privacy Policy</a>
-		</div>
+	  <div class="right">
+		<a href="/">ArchstoneApartments.com</a>
+	  </div>
+	  <div class="left-one-row">
+		<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
+		<a href="#">Privacy Policy</a>
+	  </div>
   </footer>
+
+
+	<!-- Use this in all pages -->
+  <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
+  <script src="js/jquery-bbq.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/nav.js"></script>
+	
+	<!-- Specific to this page -->
+  <script src="js/service-request.js"></script>
+
+  <!-- end scripts -->
 
 
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
