--- a/account-settings.html
+++ b/account-settings.html
@@ -18,17 +18,14 @@
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width">
 
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
+ <!-- Use this in all pages -->
   <link rel="stylesheet" href="css/reset.css"> <!-- Eric Meyer Stylesheet -->
   <link rel="stylesheet" href="css/style.css"> <!-- Default Stylesheet -->
-  <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
-  <link rel="stylesheet" href="css/globalTHintegration.css">
-  <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+  <link rel="stylesheet" href="css/global.css"> <!-- Added Styles For All Pages -->
   <link rel="stylesheet" href="css/forms.css">
+  <link rel="stylesheet" href="css/accordion.css">
+  <link rel="stylesheet" href="css/fonts.css">
 	<!--[if lt IE 9]>
 	  <link rel="stylesheet" href="css/ie.css">
 	<![endif]-->
@@ -36,52 +33,30 @@
 	  <link rel="stylesheet" href="css/ie9.css">
 	<![endif]-->
 	
-  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
-
-  <!-- All JavaScript at the bottom, except this Modernizr build.
-       Modernizr enables HTML5 elements & feature detects for optimal performance.
-       Create your own custom Modernizr build: www.modernizr.com/download/ -->
-  <script src="js/libs/modernizr-2.5.3.min.js"></script>
-
-  <!-- JavaScript in the header so my other stuff doesn't break -->
-
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script src="js/jquery-1.7.2.min.js"></script>
-  <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
-
-  <!-- scripts concatenated and minified via build script -->
-  <script src="js/jquery.cookie.js"></script>
-	<script src="js/browserimage.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/nav.js"></script>
-  <!-- end scripts -->
+	<!-- Specific to this page -->
+	
+	<!-- All Scripts are in the bottom before the </body>. Except for jquery and modernizr -->
+	<!-- Use this in all pages -->
+	<script src="js/libs/modernizr-2.5.3.min.js"></script>
+  <script src="js/jquery-1.7.2.min.js"></script> 
 
 </head>
-<body class="signed-in service-request">
+<body class="signed-in">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
-		<img class="source-image" src="images/bkgd_graphite_burst.png" >
+		<img class="source-image" src="images/bkgd_graphite_burst.png" alt="Archstone">
   </div>
-	<script type="text/javascript">Background.init(); </script><!-- This needs to be here to resize this before the page finishes loading instead of after -->
+	<!-- MJ: This needs to be here to resize this before the page finishes loading instead of after -->
+	<script src="js/browserimage.js"></script>
+
   <header>
-		<!-- Primary Navigation -->
-		<div class="primary-nav-contents" style="width:790px;">
-			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
-			<ul class="primary-nav">
-				<li><a href="#" title="Contact Us">Payment</a></li>
-				<li><a href="service-request.html">Service</a></li>
-				<li><a href="#">Information</a></li>
-				<li><a href="#" class="cta-lease">Lease</a></li>
-				<li><a href="#" class="active">Jane Smith</a></li>
-			</ul>
-		</div>
+		<!-- Dropdown Nav-->
 		<div class="dropdown-nav-contents">
 			<ul class="dropdown-nav">
 				<li>
 					<a href="#"><span class="ui-icon"> &nbsp; </span>Genevieve Cornhill</a>
 					<ul>
-						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
+						<li><a href="dialog-lease.html" class="cta-dialog" rel="request-history" title="Select the lease you would like to open">Switch to Different Lease</a></li>
 						<li><a href="contact-information.html">Contact Information</a></li>
 						<li><a href="#">Settings</a></li>
 						<li><a href="index.html">Sign Out</a></li>
@@ -89,132 +64,136 @@
 				</li>
 			</ul>
 		</div>
-  </header>
-
-  <div role="main" id="main" class="clearfix">
-		<div id="service-request" class="accordion-box squared-box clearfix">
-			<h1 class="box-title"><span>ACCOUNT SETTINGS</span></h1>
-			<div >
-				<form method="POST" action="select-lease.html">
-					<div class="section-header">
-						Select and answer security question(s)
-					</div>
-					<div class="content-padding">
-						<p class="form-note">(You'll use these if you forget your password)</p><br>						
-						<!-- ---------------------- -->					
-						<label for="securityQuestion1">Security Question</label>					
-						<div class="security-question">
-							<div class="left-form-div">
-								<select name="securityQuestion1">
-									<option  value="What city were you born in?">What was your first car?</option>
-									<option  value="What city were you born in?">What was the first street you lived on?</option>
-									<option  value="What city were you born in?">What was the name of your first pet?</option>
-									<option  value="What city were you born in?">What is your father's middle name?</option>
-									<option  value="What city were you born in?">What are the last four digits of your social security number?</option>
-									<option  value="What city were you born in?">What city were you born in?</option>
-									<option  value="What city were you born in?">What city were you born in?</option>
-									<option  value="What city were you born in?">What is your mother's maiden name?</option>								
-								</select>
-							</div>
-							<div class="form-note-alert right-form-div"></div>						
-							<div class="clear-both"></div>
-							<br>
-							<label for="securityAnswer1">Security Question Answer</label>					
-							<input type="text" name="securityAnswer1" value="Denver"/>
-						</div>
-						<!-- ---------------------- -->
-						<label for="securityQuestion2">Security Question</label>					
-						<div class="security-question">
-							<div class="left-form-div">
-								<select name="securityQuestion2">
-									<option  value="What city were you born in?">What was your first car?</option>
-									<option  value="What city were you born in?">What was the first street you lived on?</option>
-									<option  value="What city were you born in?">What was the name of your first pet?</option>
-									<option  value="What city were you born in?">What is your father's middle name?</option>
-									<option  value="What city were you born in?">What are the last four digits of your social security number?</option>
-									<option  value="What city were you born in?">What city were you born in?</option>
-									<option  value="What city were you born in?">What city were you born in?</option>
-									<option  value="What city were you born in?">What is your mother's maiden name?</option>								
-								</select>
-							</div>
-							<div class="form-note-alert right-form-div"></div>						
-							<div class="clear-both"></div>
-							<br>
-							<label for="securityAnswer2">Security Question Answer</label>					
-							<input type="text" name="securityAnswer2" value="Michael"/>
-						</div>
-						<!-- ---------------------- -->
-						<div><button type="submit" class="submit float-right"><span>Remove</span></button></div><br>
-						<div class="clear-both"></div>
-						<div><a href=""><img src="images/button_plus.png"/> Add security question</a></div>
-					</div><!-- end content-padding -->
-					
-					<div class="section-header">
-						Change Password
-					</div>
-					<div class="content-padding">
-						<label for="currentpassord">Current Password:</label>
-						<div class="clear-both"></div>
-						<div class="form-entry">
-							<div class="left-form-div"><input type="password" name="currentpassord" value="blahblah" class="textbox-checkmark"/></div>
-						</div>
-						<div class="clear-both"></div>
-						<label for="newpassword">New Password:</label>
-						<div class="form-entry">
-							<div class="left-form-div"><input type="password" name="newpassword" value="yoohoo" class="textbox-checkmark" /></div>
-						</div>
-						<div class="clear-both"></div>
-						<label for="confirmnewpassword">Confirm New Password:</label>
-						<div class="form-entry">
-							<div class="left-form-div"><input type="password" name="confirmnewpassword" value="yoohoo" class="textbox-checkmark"/></div>
-						</div>
-						<div class="clear-both"></div>
-					</div>
-					<div class="section-header">
-						Change Email Address
-					</div>
-					<div class="content-padding">
-						<div class="content-padding">
-						<p class="form-note">(This will be your new Archstone sign in email address abd will affect all leases associated with your account.)</p><br>
-						<label for="currentemail">Current Email Address:</label>
-						<div class="clear-both"></div>
-						<div class="form-entry">
-							<div class="left-form-div"><input type="text" name="currentemail" value="blahblah@blah.com" class="textbox-checkmark"/></div>
-						</div>
-						<div class="clear-both"></div>
-						<label for="newemail">New Email Address:</label>
-						<div class="form-entry">
-							<div class="left-form-div"><input type="text" name="newemail" value="yoohoo@blah.com" class="textbox-checkmark" /></div>
-						</div>
-						<div class="clear-both"></div>
-						<label for="confirmnewemail">Confirm New Email Address:</label>
-						<div class="form-entry">
-							<div class="left-form-div"><input type="text" name="confirmnewemail" value="heya@blah.com" class="textbox-checkmark"/></div>
-						</div>
-						<div class="clear-both"></div>
-					</div>
-					<div class="submit-area">
-						<button type="submit" class="submit"><span>Cancel Changes</span><span class="end"> &nbsp; </span></button>
-						<span style="width:50px;">&nbsp;</span>
-						<button type="submit" class="submit"><span>Save Changes</span><span class="end"> &nbsp; </span></button>
-					</div>					
-				</form>
-			</div>
+	
+		<!-- Primary Navigation -->
+		<div class="primary-nav-contents">
+			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" alt="Archstone"></a>
+			<ul class="primary-nav">
+				<li><a href="#" title="Contact Us">Payment</a></li>
+				<li>
+					<a href="service-request.html">Service</a>
+				</li>
+				<li><a href="#">Information</a></li>
+				<li><a href="#">Lease</a></li>
+			</ul>
 		</div>
-  </div>
+		
+	</header>
+	<div role="main" id="main" class="clearfix">
+		<div class="accordion-box squared-box clearfix">
+			<form method="POST" action="request-history.html">
+				<h1 class="box-title"><span class="title-area-right">Community: Utopia</span><span>ACCOUNT SETTINGS</span></h1>
+				<div class="squared-accordion" >		
+					<h2>Select and answer security question(s)</h2>
+					<div class="padded">
+						<p class="form-note">(You'll use these if you forget your password)</p><br>
+						
+						<ul class="form-with-validation">
+							<li>
+								<label for="securityQuestion1">Security Question <span class="required">*</span></label>	
+								<span class="message-text" >you must always have one security question</span><br>
+								<select data-val="true" data-val-required="Security Question is required." name="securityQuestion1" id="securityQuestion1" class="input-validation-error">
+									<option  value="What was your first car?">What was your first car?</option>
+									<option  value="What was the name of your first pet?">What was the name of your first pet?</option>
+									<option  value="What is your father's middle name?">What is your father's middle name?</option>
+									<option  value="What are the last four digits of your social security number?">What are the last four digits of your social security number?</option>
+									<option  value="What city were you born in?">What city were you born in?</option>
+									<option  value="What is your mother's maiden name?">What is your mother's maiden name?</option>							
+								</select>
+							</li>
+							<li>
+								<label for="securityAnswer1">Security Question Answer <span class="required">*</span></label>
+								<input data-val="true" data-val-required="Security Question Answer is required." id="securityAnswer1" name="securityAnswer1" type="text" value="Denver" >
+							</li>
+							<li>
+								<label for="securityQuestion2">Security Question</label><br>
+								<select name="securityQuestion2" id="securityQuestion2">
+									<option  value="What was your first car?">What was your first car?</option>
+									<option  value="What was the name of your first pet?">What was the name of your first pet?</option>
+									<option  value="What is your father's middle name?" selected="selected">What is your father's middle name?</option>
+									<option  value="What are the last four digits of your social security number?">What are the last four digits of your social security number?</option>
+									<option  value="What city were you born in?">What city were you born in?</option>
+									<option  value="What is your mother's maiden name?">What is your mother's maiden name?</option>								
+								</select>
+							</li>
+							<li>
+								<label for="securityAnswer2">Security Question Answer </label>
+								<input data-val="true" id="securityAnswer2" name="securityAnswer2" type="text" value="Michael" />
+							</li>
+							<li>
+								<button type="button" class="cancel"><span>Remove</span><span class="end"> &nbsp; </span></button>								
+								<p><a class="add-button small-teal" href="#">Add security question</a></p>
+							</li>
+						</ul>
+					</div>
+					<h2>Change Password</h2>
+					<div class="padded">
+						<ul class="form-with-validation">
+							<li>							
+								<label for="password">Current Password <span class="required">*</span></label>
+								<input data-val="true" data-val-required="Current Password is required." id="password" name="password" type="password" value="">
+							</li>
+							<li>
+								<label for="newPassword">New Password <span class="required">*</span></label>
+								<span class="message-text" >(6 character minimum)</span>
+								<input data-val="true" data-val-required="New Password is required." id="newPassword" name="newPassword" tabindex="2" type="password" value="">
+							</li>
+							<li>
+								<label for="confirmPassword">Confirm New Password <span class="required">*</span></label>
+								<input data-val="true" data-val-required="Confirm New Password is required and must match New Password." id="confirmPassword" name="confirmPassword" tabindex="3" type="password" value="">
+							</li>
+						</ul>
+					</div>		
+					<h2>Change Email Address</h2>
+					<div class="padded">
+						<p class="form-note">(This will be your new Archstone sign in email address and will effect all leases associated with your account)</p><br>
+						<ul class="form-with-validation">
+							<li>							
+								<label for="email">Current Email Address <span class="required">*</span></label>
+								<input data-val="true" data-val-required="Current Email Address is required." id="email" name="email" type="text" value="" >
+							</li>
+							<li>
+								<label for="newemail">New Email Address <span class="required">*</span></label>
+								<input data-val="true" data-val-required="New Email Address is required." id="newemail" name="newemail" tabindex="2" type="text" value="">
+							</li>
+							<li>
+								<label for="confirmnewemail">Confirm New Email Address <span class="required">*</span></label>
+								<input data-val="true" data-val-required="Confirm New Email Address is required and must match New Email Address." id="confirmnewemail" name="confirmnewemail" tabindex="3" type="text" value="" >
+							</li>
+						</ul>
+					</div>		
+				</div>
+				<p class="submit-area">
+					<button class="cancel"><span>Cancel Changes</span><span class="end"> &nbsp; </span></button>
+					&nbsp;&nbsp;&nbsp;
+					<button type="submit" class="submit"><span>Save Changes</span><span class="end"> &nbsp; </span></button>
+				</p>				
+			</form>
+		</div>		
+	</div>
   <footer>
-		<div class="right">
-			<a href="dialog-email.html" class="cta-dialog" rel="footer" title="Contact Us">Contact Us</a>
-		</div>
-		<div class="left">
-			<p>Champions Park  |  2525 E. 104th Ave., Thornton, CO 80233  |  (866) 914-9716</p>
-			<p>
-				<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
-				<a href="#">Privacy Policy</a> | 
-				<a href="/">ArchstoneApartments.com</a>
-			</p>
-		</div>
+	  <div class="right">
+		<a href="/">ArchstoneApartments.com</a>
+	  </div>
+	  <div class="left">
+		<a href="#">Copyright © 2012 Archstone. All Rights Reserved.</a> | 
+		<a href="#">Privacy Policy</a>
+	  </div>
   </footer>
+
+
+	<!-- Use this in all pages -->
+  <script src="js/ui/jquery-ui-1.8.20.custom.js"></script>
+  <script src="js/jquery-bbq.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/nav.js"></script>
+	
+	<!-- Specific to this page -->
+  <script src="js/service-request.js"></script>
+
+  <!-- end scripts -->
+
 
   <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
        mathiasbynens.be/notes/async-analytics-snippet -->
